login/registration page donezo

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Users Login</title>
 </head>
+
 <body>
-    
+    <main>
+        <a href="/">Home Page</a>
+
+
+        <section class="login">
+            <h2>Login</h2>
+            <form action="/login" method="post">
+                <input type="text" name="email" placeholder="Email"><br>
+                <input type="password" name="password" placeholder="Password"><br>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+
+        <br>
+
+        <section class="register">
+            <h2>Register</h2>
+            <form action="/register" method="post">
+                <input type="text" name="username" placeholder="username"><br>
+                <input type="email" name="email" placeholder="Email"><br>
+                <input type="password" name="password" placeholder="Password"><br>
+                <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+
+
+
+    </main>
+
+
 </body>
+
 </html>
