added index rendering function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-
+    <% include ./partials/head.ejs %>
   </head>
   <body>
-
+    <% include ./partials/header.ejs %>
 
     <%for(let i = 0; i < pubComps.length; i++){%>
       <%=pubComps[i].title%>
