--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,2 +1,10 @@
 <!-- put navbar template here -->
-this is a header
+<nav>
+   <div class="nav-wrapper">
+     <a href="#" class="brand-logo">You Bet Your Ass</a>
+     <ul id="nav-mobile" class="right hide-on-med-and-down">
+       <li><a href="/login">Login In</a></li>
+       <li><a href="/competitions/new">Create Compeition</a></li>
+     </ul>
+   </div>
+ </nav>
