added index rendering of private comps

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,9 @@
     <%for(let i = 0; i < pubComps.length; i++){%>
       <%=pubComps[i].title%>
     <%}%>
+    <div class = 'divider'></div>
+    <%for(let i = 0; i < privComps.length; i++){%>
+      <%=privComps[i].title%>
+    <%}%>
   </body>
 </html>
