--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,12 @@
 
     <%for(let i = 0; i < pubComps.length; i++){%>
       <%=pubComps[i].title%>
+      <a href='/competitions/<%=pubComps[i].id%>'>View Competition</a>
     <%}%>
     <div class = 'divider'></div>
     <%for(let i = 0; i < privComps.length; i++){%>
       <%=privComps[i].title%>
+      <a href='/competitions/private/<%=privComps[i].id%>'>View Competition</a>
     <%}%>
   </body>
 </html>
