--- a/views/competition.ejs
+++ b/views/competition.ejs
@@ -7,7 +7,8 @@
     <% include ./partials/header.ejs %>
     <%=competition.title%>
     Description: <%=competition.description%><br>
-    Minimum: <%=competition.min_bet%>
+    Minimum: <%=competition.bet_min%>
+    pool: <%=competition.pool%>
 
     Participants:
     <%for(let i = 0; i < participants.length; i++){%>
