--- a/views/competition.ejs
+++ b/views/competition.ejs
@@ -23,6 +23,7 @@
     <%}%>
 
     <%if(user){%>
+      <a href='/competitions/<%=competition.id%>/join'>Join Competition</a>
       <form action = '/competitions/<%=competition.id%>/comment' method = 'POST'>
         <div class='input-field'>
           <textarea class='materialize-textarea' name='content'></textarea>
