--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,41 +2,53 @@
 <html lang="en">
 
 <head>
-  <% include ./partials/head.ejs%>
+    <% include ./partials/head.ejs%>
 </head>
 
-<body>
-  <% include ./partials/header.ejs%>
+<style>
+
+
+</style>
+
+<body class="vsc-initialized" style="overflow: hidden;">
+    <% include ./partials/header.ejs%>
     <main>
-        <a href="/">Home Page</a>
+        <!-- <a class="waves-effect waves-light btn" href="/">Home Page</a> -->
 
 
-        <section class="login">
-            <h2>Login</h2>
-            <form action="/login" method="post">
-                <input type="text" name="email" placeholder="Email"><br>
-                <input type="password" name="password" placeholder="Password"><br>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+        <div class="container">
 
-        <br>
+            <section class="login">
+                <h2 class="orange-text">Login</h2>
+                <form action="/login" method="post">
+                    <input type="text" name="email" placeholder="Email"><br>
+                    <input type="password" name="password" placeholder="Password"><br>
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
 
-        <section class="register">
-            <h2>Register</h2>
-            <form action="/register" method="post">
-                <input type="text" name="username" placeholder="username"><br>
-                <input type="email" name="email" placeholder="Email"><br>
-                <input type="password" name="password" placeholder="Password"><br>
-                <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+                    </button>
+                </form>
+            </section>
 
+            <br>
+
+            <section class="register">
+                <h2 class="orange-text">Register</h2>
+                <form action="/register" method="post">
+                    <input type="text" name="username" placeholder="UserName"><br>
+                    <input type="email" name="email" placeholder="Email"><br>
+                    <input type="password" name="password" placeholder="Password"><br>
+                    <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+
+                    </button>
+                </form>
+            </section>
+        </div>
 
 
     </main>
 
+   
 
 </body>
 
