--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,12 @@
     <div class ='container'>
       <div class = 'row'>
         <%for(let i = 0; i < pubComps.length; i++){%>
-          <%=pubComps[i].title%>
-          <a href='/competitions/<%=pubComps[i].id%>'>View Competition</a>
+          <div class = 'card'>
+            <div class = 'card-content'>              
+              <%=pubComps[i].title%>
+              <a href='/competitions/<%=pubComps[i].id%>'>View Competition</a>
+            </div>
+          </div>
           <%}%>
       </div>
       <div class='row'>
