--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
         <%=messages%>
       <%}%>
         <section class="login">
-            <h2>Login</h2>
+            <h2 class="orange-text">Login</h2>
             <form action="/login" method="post">
                 <input type="text" name="email" placeholder="Email"><br>
                 <input type="password" name="password" placeholder="Password"><br>
