--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,45 +6,58 @@
 </head>
 
 <style>
-
+   h2{
+       text-align: center;
+   }
+   .card {
+    padding: 25px;
+   }
 
 </style>
 
-<body class="vsc-initialized" style="overflow: hidden;">
+<body class="vsc-initialized grey lighten-4">
     <% include ./partials/header.ejs%>
     <main>
-      <%if(messages){%>
+        <%if(messages){%>
         <%=messages%>
-      <%}%>
-        <section class="login">
-            <h2 class="orange-text">Login</h2>
-            <form action="/login" method="post">
-                <input type="text" name="email" placeholder="Email"><br>
-                <input type="password" name="password" placeholder="Password"><br>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+        <%}%>
+        <div class="row">
+            <div class="col s6">
+                <div class="card">
+                    <section class="login">
+                        <h2 class="orange-text">Login</h2>
+                        <form action="/login" method="post">
+                            <input type="text" name="email" placeholder="Email"><br>
+                            <input type="password" name="password" placeholder="Password"><br>
+                            <br>
+                            <button class="btn-large waves-effect waves-light orange" type="submit">Submit</button>
+                        </form>
+                    </section>
+                </div>
+            </div>
+            
+            <div class="col s6">
+                <div class="card">
 
-            <br>
+                    <section class="register">
+                        <h2 class="orange-text">Register</h2>
+                        <form action="/register" method="post">
+                            <input type="text" name="username" placeholder="UserName"><br>
+                            <input type="email" name="email" placeholder="Email"><br>
+                            <input type="password" name="password" placeholder="Password"><br>
+                            <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
+                            <br>
+                            <button class="btn-large waves-effect waves-light orange" type="submit" name="action">Submit
 
-            <section class="register">
-                <h2 class="orange-text">Register</h2>
-                <form action="/register" method="post">
-                    <input type="text" name="username" placeholder="UserName"><br>
-                    <input type="email" name="email" placeholder="Email"><br>
-                    <input type="password" name="password" placeholder="Password"><br>
-                    <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-
-                    </button>
-                </form>
-            </section>
+                            </button>
+                        </form>
+                    </section>
+                </div>
+            </div>
         </div>
-
-
     </main>
 
-   
+
 
 </body>
 
