started with footer at login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,12 +6,16 @@
 </head>
 
 <style>
-   h2{
+    h2{
        text-align: center;
+       margin-bottom: 50px;
    }
    .card {
     padding: 25px;
+    margin: 50px;
    }
+  
+  
 
 </style>
 
@@ -30,14 +34,16 @@
                             <input type="text" name="email" placeholder="Email"><br>
                             <input type="password" name="password" placeholder="Password"><br>
                             <br>
-                            <button class="btn-large waves-effect waves-light orange" type="submit">Submit</button>
+                            <div style="text-align: center">
+                                <button class="btn-large  waves-effect waves-light orange" type="submit">Submit</button>
+                            </div>
                         </form>
                     </section>
                 </div>
             </div>
-            
+
             <div class="col s6">
-                <div class="card">
+                <div class="card large">
 
                     <section class="register">
                         <h2 class="orange-text">Register</h2>
@@ -47,9 +53,9 @@
                             <input type="password" name="password" placeholder="Password"><br>
                             <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
                             <br>
-                            <button class="btn-large waves-effect waves-light orange" type="submit" name="action">Submit
-
-                            </button>
+                            <div style="text-align: center">
+                                <button class="btn-large  waves-effect waves-light orange" type="submit">Submit</button>
+                            </div>
                         </form>
                     </section>
                 </div>
@@ -57,6 +63,33 @@
         </div>
     </main>
 
+    <footer class="page-footer waves-light orange">
+
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
+                        content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                       
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2019 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+
+    </footer>
 
 
 </body>
