--- a/views/competition.ejs
+++ b/views/competition.ejs
@@ -5,11 +5,26 @@
   </head>
   <body>
     <% include ./partials/header.ejs %>
+    <%if(user.username===competition.arbiter_name){%>
+      You are currently the arbiter of this competition. You may select a new arbiter below:
+      <br>
+      <form action = '/competitions/<%=competition.id%>/arbiter' method='post'>
+        <input type="text" name="arbiter" list="usernames">
+        <datalist id="usernames">
+          <%for(let i = 0; i < users.length; i++){%>
+            <option value = '<%=users[i].username%>'>
+          <%}%>
+        </datalist>
+        <button>Submit</button>
+      </form>
+      <a href = '/competitions/<%=competition.id%>/complete'>Mark Complete</a>
+    <%}%>
     <%=competition.title%>
+    Started: <%=competition.created_at%>
     Description: <%=competition.description%><br>
     Minimum: <%=competition.bet_min%>
-    pool: <%=competition.pool%>
-
+    pool: <%=competition.pool%><br>
+    Arbiter: <%=competition.arbiter_name%>
     Participants:
     <%for(let i = 0; i < participants.length; i++){%>
       <%=participants[i].username%>
