--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,3 +4,4 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <scrip src = './materializeInit.js'></script>
