--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
                             <input type="password" name="password" placeholder="Password"><br>
                             <br>
                             <div style="text-align: center">
-                                <button class="btn-large  waves-effect waves-light orange" type="submit">Submit</button>
+                                <button class="btn-large  waves-effect waves-light orange" type="submit">Login</button>
                             </div>
                         </form>
                     </section>
@@ -54,7 +54,7 @@
                             <input type="password" name="confirmPassword" placeholder="Confirm Password"><br>
                             <br>
                             <div style="text-align: center">
-                                <button class="btn-large  waves-effect waves-light orange" type="submit">Submit</button>
+                                <button class="btn-large  waves-effect waves-light orange" type="submit">Create Account</button>
                             </div>
                         </form>
                     </section>
