--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!-- put navbar template here -->
 <nav class="nav-wrapper light-blue lighten-1">
   <div class="nav-wrapper container">
-    <a href="/" class="brand-logo">You Bet Yo Ass</a>
+    <a href="/" class="brand-logo">You Bet Yo A$$</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <%if(!user){%>
       <li><a href="/login">Log In</a></li>
