--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,6 @@
     margin: 50px;
    }
   
-  
 
 </style>
 
@@ -91,7 +90,7 @@
 
     </footer>
 
-
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
