added profile page

--- a/views/winners.ejs
+++ b/views/winners.ejs
@@ -11,7 +11,7 @@
         <%for(let i = 0; i < participants.length;i++){%>
         <p>
           <label>
-            <input name="<%=participants[i].username%>" type="checkbox" value='<%=participants[i].username%>' />
+            <input name="<%=participants[i].id%>" type="checkbox" value='<%=participants[i].id%>' />
             <span><%=participants[i].username%></span>
           </label>
         </p>
