added claim button to profile

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,8 @@
       <%if(!user){%>
       <li><a href="/login">Log In</a></li>
       <%} else {%>
-      <li><a href="/new">Start Compeition</a></li>
+        <li><a href="/profile">Profile</a></li>
+      <li><a href="/new">Start Competition</a></li>
       <li><a href="/logout">Log Out</a></li>
       <%}%>
     </ul>
