--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         <div class='divider'></div>
         <%for(let i = 0; i < pubComps.length; i++){%>
           <div class = 'col s4'>
-            <div class = 'card'>
+            <div class = 'card small'>
               <div class = 'card-content'>
                 <div class = 'card-title'>
                   <%=pubComps[i].title%>
@@ -32,7 +32,7 @@
         <div class='divider'></div>
         <%for(let i = 0; i < privComps.length; i++){%>
           <div class = 'col s4'>
-            <div class = 'card'>
+            <div class = 'card small'>
               <div class = 'card-content'>
                 <div class = 'card-title'>
                   <%=privComps[i].title%>
