--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <% include ./partials/head.ejs %>
   </head>
-  <body>
+  <body class = 'grey lighten-4'>
     <% include ./partials/header.ejs %>
     <div class ='container'>
       <div class = 'row'>
@@ -53,5 +53,6 @@
         <%}%>
       </div>
     </div>
+        <% include ./partials/footer.ejs%>
   </body>
 </html>
