--- a/views/newCompetition.ejs
+++ b/views/newCompetition.ejs
@@ -8,12 +8,12 @@
 <style>
   .card {
     margin: 100px;
-    
+
   }
   form {
     padding: 25px;
     padding-bottom: 100px;
-   
+
   }
 </style>
 
@@ -62,6 +62,7 @@
     <script src='../newComp.js'></script>
 
   </div>
+      <% include ./partials/footer.ejs%>
 </body>
 
 </html>
