fixed relative path for main css file

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,7 @@
   <head>
     <%include ./partials/head.ejs%>
     <link rel='stylesheet' href='../profile.css' />
+    <link rel = 'stylesheet' href = '../main.css' />
   </head>
   <body class = 'grey lighten-4'>
     <main>
