--- a/views/winners.ejs
+++ b/views/winners.ejs
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <%include ./partials/head.ejs%>
+    <link rel = 'stylesheet' href = '../../main.css' />
   </head>
   <body class = 'grey lighten-4'>
     <%include ./partials/header.ejs%>
+    <main>
     <div class = 'container'>
       <div class = 'row'>
         <div class = 'col s12'>
@@ -29,6 +31,7 @@
           </div>
         </div>
     </div>
+  </main>
         <% include ./partials/footer.ejs%>
   </body>
 </html>
