--- a/views/competition.ejs
+++ b/views/competition.ejs
@@ -3,9 +3,11 @@
 
 <head>
   <% include ./partials/head.ejs %>
+  <link rel = 'stylesheet' href = '../../main.css' />
 </head>
 
 <body>
+  <main>
   <% include ./partials/header.ejs %>
   <div class="row">
     <div class="col s4">
@@ -62,6 +64,7 @@
     </div>
   </form>
   <%}%>
+</main>
     <% include ./partials/footer.ejs%>
 </body>
 
