--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <% include ./partials/head.ejs %>
+    <link rel = 'stylesheet' href = '../main.css' />
   </head>
   <body class = 'grey lighten-4'>
+    <main>
     <% include ./partials/header.ejs %>
     <div class ='container'>
       <div class = 'row'>
@@ -53,6 +55,7 @@
         <%}%>
       </div>
     </div>
+  </main>
         <% include ./partials/footer.ejs%>
   </body>
 </html>
