--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,5 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<!-- <script src='./materializeInit.js'></script> --><link rel = 'stylesheet' href = '../main.css' />
+<!-- <script src='./materializeInit.js'></script> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
