--- a/views/competition.ejs
+++ b/views/competition.ejs
@@ -5,64 +5,103 @@
   <% include ./partials/head.ejs %>
 </head>
 
+<style>
+  /* .row {
+  display: flex;
+  flex-direction: row-reverse;
+} */
+
+  /* .container {
+    display: flex;
+    
+  } */
+
+ 
+</style>
+
 <body>
+
   <% include ./partials/header.ejs %>
-  <div class="row">
-    <div class="col s4">
-      <%if(user){%>
-      <%if(user.username===competition.arbiter_name){%>
-      You are currently the arbiter of this competition. You may select a new arbiter below:
-      <br>
-      <form action='/competitions/<%=competition.id%>/arbiter' method='post'>
-        <input type="text" name="arbiter" list="usernames">
-        <datalist id="usernames">
-          <%for(let i = 0; i < users.length; i++){%>
-          <option value='<%=users[i].username%>'>
-            <%}%>
-        </datalist>
-        <button>Submit</button>
+
+
+  <!-- <div class="container"> -->
+    <%if(user){%>
+    <%if(user.username===competition.arbiter_name){%>
+    <div class="row">
+      <div class="col s5 push-s7">
+        <div class="card orange darken-1">
+          <div class="card-content white-text">
+            <h6 style="text-align:center">You are currently the arbiter of this competition. <br>You may select a new arbiter below:</h6>
+            <br>
+
+            <form action='/competitions/<%=competition.id%>/arbiter' method='post'>
+              <input type="text" name="arbiter" list="usernames">
+              <datalist id="usernames">
+                <%for(let i = 0; i < users.length; i++){%>
+                <option value='<%=users[i].username%>'>
+                  <%}%>
+              </datalist>
+              <button>Submit</button>
+
+            </form>
+            <br><br>
+            <a class="waves-effect waves-light btn" href='/competitions/<%=competition.id%>/complete'>Mark Complete</a> <br>
+          </div>
+        </div>
+
+        <%}%>
+        <%}%>
+      </div>
+
+
+
+
+      <div class="col s7 pull-s5">
+        <!-- <a href='/competitions/<%=competition.id%>/join'>Join Competition</a><br> -->
+
+
+        <%=competition.title%> <br>
+        Started:
+        <%=competition.created_at%><br>
+        Description:
+        <%=competition.description%><br>
+        Minimum:
+        <%=competition.bet_min%> <br>
+        Pool:
+        <%=competition.pool%><br>
+        Arbiter:
+        <%=competition.arbiter_name%><br>
+        Participants:
+        <%for(let i = 0; i < participants.length; i++){%>
+        <%=participants[i].username%>
+        <%}%>
+        <br>
+
+        <b>Comments:</b>
+        <%for(let i = 0; i < comments.length; i++){%>
+        <br>
+        <%=comments[i].username%>:
+        <%=comments[i].content%>
+        <%}%> <br>
+
+        <%if(user){%>
+
+
+        <form action='/competitions/<%=competition.id%>/comment' method='POST'>
+          <div class='input-field'>
+            <textarea class='materialize-textarea' name='content'></textarea>
+            <button class="waves-effect waves-light btn" type='submit'>Submit Comment</button>
+          </div>
+        </form>
+        <%}%>
+      </div>
     </div>
-    <div class="col s6">
-      </form>
-      <a href='/competitions/<%=competition.id%>/complete'>Mark Complete</a>
-      <%}%>
-      <%}%>
-      <%=competition.title%> <br>
-      Started:
-      <%=competition.created_at%><br>
-      Description:
-      <%=competition.description%><br>
-      Minimum:
-      <%=competition.bet_min%> <br>
-      Pool:
-      <%=competition.pool%><br>
-      Arbiter:
-      <%=competition.arbiter_name%><br>
-      Participants:
-      <%for(let i = 0; i < participants.length; i++){%>
-      <%=participants[i].username%>
-      <%}%>
-      <br>
-    </div>
-  </div>
-  <b>Comments:</b>
-  <%for(let i = 0; i < comments.length; i++){%>
+  <!-- </div> -->
+
   <br>
-  <%=comments[i].username%>:
-  <%=comments[i].content%>
-  <%}%> <br>
-
-  <%if(user){%>
-  <a href='/competitions/<%=competition.id%>/join'>Join Competition</a>
-  </div>
-  <form action='/competitions/<%=competition.id%>/comment' method='POST'>
-    <div class='input-field'>
-      <textarea class='materialize-textarea' name='content'></textarea>
-      <button type='submit'>Submit Comment</button>
-    </div>
-  </form>
-  <%}%>
-
+  <br>
+  
+ <a class="waves-effect waves-light btn-large amber darken-2" href='/competitions/<%=competition.id%>/join'>Join Competition</a>
 </body>
 
 </html>
